# pre-commit-hooks

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  feature-defect-rally.py  requirements.txt  setup.cfg  setup.py
.chglog/: config.yml
pre_commit_hooks/: feature-defect-rally  feature_defect_rally.py
scripts/: rally-details.py
